Bug fix: Fixed the jumping of the metaDataList node in Content Type Filelist settings dialog during slides...

--- a/contenido/styles/content_types/cms_filelist.css
+++ b/contenido/styles/content_types/cms_filelist.css
@@ -46,6 +46,10 @@
     float: left;
 }
 
+.cms_filelist #metaDataList {
+    clear: both;
+}
+
 .cms_filelist #metaDataList  ul li {
     list-style: none;
 }
